Fix accessibility issues with dark mode animation

--- a/module-1/styles.css
+++ b/module-1/styles.css
@@ -30,11 +30,13 @@ body {
 body {
   color: var(--font-color);
   background: var(--bg-color);
-  transition: 0.25s color, 0.25s background, 0.25s text-shadow;
   font: 1.2rem/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: var(--font-shadow-color) 0px 1px;
 }
 
+.color-fade {
+  transition: 0.25s color, 0.25s background, 0.25s text-shadow;
+}
 /* Links */
 
 a {
